--- a/socket-app/package.json
+++ b/socket-app/package.json
@@ -9,7 +9,8 @@
   "author": "Krendan",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
-	"mysql": "^2.15.0"
+    "mysql": "^2.15.0"
   }
 }
