--- a/socket-app/package.json
+++ b/socket-app/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
+    "fs": "0.0.1-security",
     "multer": "^1.4.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.0"
